--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -565,6 +565,10 @@
       "txt-settings": "設定",
       "txt-updateDttm": "最近更新時間",
       "txt-remoteControl": "遠端控制",
+      "txt-compressFile": "壓縮檔案",
+      "txt-reCompressFile": "重新壓縮",
+      "txt-chooseFile": "選擇檔案",
+      "txt-downloadFile": "下載檔案",
       "txt-compressLogs": "壓縮Logs",
       "txt-recompressLogs": "重新壓縮Logs",
       "txt-downloadLogs": "下載Logs",
@@ -822,7 +826,7 @@
       "txt-trainingTimeScale-minute": "分鐘",
       "txt-trainingTimeScale-hour": "小時",
       "txt-trainingTimeScale-day": "日",
-      "txt-thresholdWeight": "靈敏度臨界值",
+      "txt-thresholdWeight": "臨界值",
       "txt-thresholdWeightLow": "低",
       "txt-thresholdWeightMedium": "中",
       "txt-thresholdWeightHigh": "高",
