Add query filter CRUD.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -19,6 +19,11 @@
   "txt-dateRange": "Date Range",
   "txt-filter": "Filter",
   "txt-filterQuery": "Filter Query",
+  "txt-openQuery": "Open Filter Query",
+  "txt-saveQuery": "Save Filter Query",
+  "txt-deleteQuery": "Delete Filter Query",
+  "txt-queryName": "Query Filter Name",
+  "txt-querySaved": "Query Filter Saved",
   "txt-search": "Search",
   "txt-pageSize": "Page Size",
   "txt-totalCount": "Total Count",
