--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -17,8 +17,13 @@
   "txt-date": "日期",
   "txt-yearMonth": "年 / 月",
   "txt-dateRange": "時間區間",
-  "txt-filter": "過濾",
-  "txt-filterQuery": "過濾條件",
+  "txt-filter": "查詢",
+  "txt-filterQuery": "查詢條件",
+  "txt-openQuery": "開啟查詢條件",
+  "txt-saveQuery": "儲存查詢條件",
+  "txt-deleteQuery": "刪除查詢條件",
+  "txt-queryName": "查詢條件名稱",
+  "txt-querySaved": "查詢條件已儲存",
   "txt-search": "搜尋",
   "txt-pageSize": "單頁資料數",
   "txt-totalCount": "總資料數",
@@ -835,7 +840,7 @@
       "txt-patternQuery3": "次成為告警",
       "txt-socQuery1": "一小時內最多產生",
       "txt-socQuery2": "筆資安單",
-      "txt-mark": "過濾 / 標示",
+      "txt-mark": "查詢 / 標示",
       "txt-clear": "清除條件",
       "txt-top10text": "前十大目標服務/主機/IP",
       "txt-analysisType": "分析項目",
@@ -1193,7 +1198,7 @@
     "txt-compress-logs": "壓縮Logs",
     "txt-recompress-logs": "重新壓縮Logs",
     "txt-unregister": "反註冊",
-    "txt-addToFilterList": "加入過濾名單",
+    "txt-addToFilterList": "加入查詢名單",
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
     "txt-suspiciousFilePath": "可疑檔案路徑",
@@ -1601,7 +1606,7 @@
       "downloadCsv": "下載CSV",
       "print": "列印",
       "viewColumns": "查看欄位",
-      "filterTable": "過濾列表"
+      "filterTable": "查詢列表"
     },
     "viewColumns": {
       "title": "顯示欄位",
