--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1213,6 +1213,8 @@
     "txt-restoreDefault": "Restore Default",
     "txt-refresh": "Refresh",
     "txt-reCheck": "Re-check",
+    "txt-buildSnapshot": "Build Snapshot",
+    "txt-allowList": "Allow List",
     "txt-reCompress": "Re-compress",
     "txt-downloadFile": "Download File",
     "txt-compressFile": "Compress File",
