--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -1213,6 +1213,8 @@
     "txt-restoreDefault": "還原預設值",
     "txt-refresh": "重新載入",
     "txt-reCheck": "重新檢測",
+    "txt-buildSnapshot": "建立基準點",
+    "txt-allowList": "設定白名單",
     "txt-reCompress": "重新壓縮",
     "txt-downloadFile": "下載檔案",
     "txt-compressFile": "壓縮檔案",
