--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1219,8 +1219,8 @@
     "txt-downloadFile": "Download File",
     "txt-compressFile": "Compress File",
     "txt-downloadLogs": "Download Logs",
-    "txt-compressLogs": "Compress Logs",
-    "txt-recompressLogs": "Recompress Logs",
+    "txt-compress-logs": "Compress Logs",
+    "txt-recompress-logs": "Recompress Logs",
     "txt-unregister": "Unregister",
     "txt-addToFilterList": "Add to filter list",
     "txt-suspiciousFileCount": "Suspicious File Count",
@@ -1287,8 +1287,8 @@
     "txt-scannerSchedule": "Scanner Schedule",
     "txt-execute": "Execute",
     "txt-terminate": "Terminate",
-    "txt-serverSystem": "Server",
-    "txt-pcSystem": "PC",
+    "txt-serverOs": "Server",
+    "txt-pcOs": "PC",
     "txt-scanFileWhitelist": "Malware Whitelist",
     "txt-whitelistSize": "Current Whitelist Size",
     "scan-list": {
