Update locales of cpe23Uri

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -625,6 +625,7 @@
     "txt-kbidName": "KBID Name",
     "txt-endpoint": "Endpoint",
     "txt-ipOrHostName": "IP or Host Name",
+    "txt-cpe23uri": "CPE Name",
     "txt-exposedDevices": "Exposed Devices",
     "txt-departmentName": "Department",
     "txt-ip": "IP",
