--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -816,7 +816,7 @@
     "targetHw": "目標硬體",
     "departmentSelected": "部門",
     "other": "其他",
-    "cpe23uri": "cpe23Uri",
+    "cpe23uri": "CPE名稱",
     "productCpename": "產品名稱",
     "isMatched": "相符",
     "system": "系統",
