--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -625,6 +625,7 @@
     "txt-kbidName": "KBID名稱",
     "txt-endpoint": "端點主機",
     "txt-ipOrHostName": "IP或主機",
+    "txt-cpe23uri": "CPE名稱",
     "txt-exposedDevices": "資產數量",
     "txt-departmentName": "部門",
     "txt-ip": "IP",
